# luminous

./: .gitignore  AGENTS.md  CREDITS.md  DESIGN.md  DESIGN_TOOLS_WALKTHROUGH.md  LICENSE  README.md  ROADMAP.md  WALKTHROUGH.md  package-lock.json  package.json  vite.config.js  vite.perf.config.js  vitest.setup.ts  walkthrough.md
.agents/: AGENTS.md
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
docs/: BENCHMARK.md  DESIGN_TOOLS_WALKTHROUGH.md  release-notes-v0.31.0.md  release-notes-v0.43.0.md  release-notes-v0.50.0.md  release-notes-v0.60.0.md  release-notes-v0.67.0.md  release-notes-v0.75.0.md  release-notes-v0.90.0.md  release-notes-v1.0.0.md
features/: cover_art.feature  design_tools.feature  equalizer.feature  library_scan.feature  lyrics.feature  playback_controls.feature  playlists.feature  tag_editor.feature
scripts/: bump-version.ts  compile-mock-script.ts  embedded-art-cache.ts  mock-config.example.json  mock-data.ts  mock-library.ts  release.ts  take-screenshots.ts  tauri-ipc-mock.js  tauri-ipc-mock.ts  vite-mock-plugin.ts
src/: app.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: analyzer.rs  audio.rs  collection.rs  covermanager.rs  db.rs  equalizer.rs  filter_parser.rs  install_format.rs  lib.rs  loudness.rs  lyrics.rs  main.rs  media_session.rs  models.rs  moodbar.rs  organizer.rs  player.rs  playlist.rs  playlist_parsers.rs  stats.rs  tageditor.rs  waveform.rs
src-tauri/src/commands/: collection.rs  cover.rs  equalizer.rs  loudness.rs  lyrics.rs  mod.rs  organizer.rs  player.rs  playlist.rs  settings.rs  stats.rs  tageditor.rs  visualizer.rs  window.rs
src-tauri/tests/: cover_art_bdd.rs  design_tools_bdd.rs  equalizer_bdd.rs  library_scan_bdd.rs  lyrics_bdd.rs  playback_controls_bdd.rs  playback_resume_test.rs  playlists_bdd.rs  tag_editor_bdd.rs
src/lib/components/: AlbumCard.svelte  AlbumCard.test.ts  AlbumContextMenu.svelte  AlbumDetailView.svelte  AlbumTagEditor.svelte  (+58 more)
src/routes/: +layout.svelte  +page.svelte
static/: tauri-ipc-mock.js
(+28 files in other folders)
