[package]
name = "luminous"
version = "0.31.0"
description = "Luminous Music Player — A modern, elegant music player"
authors = ["Eric James Soltys <ericjamessoltys@outlook.com>"]
edition = "2021"

[lib]
name = "luminous_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# --- Tauri ---
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"

# --- Serialization ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- Async runtime ---
tokio = { version = "1", features = ["full"] }

# --- Database ---
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# --- Audio decoding ---
# `all` enables every codec and format symphonia supports.
# Note: AIFF is not yet a supported format in symphonia 0.5.x.
symphonia = { version = "0.5", features = ["all"] }

# --- Audio output ---
cpal = "0.15"

# --- Audio resampling ---
rubato = "0.16"

# --- Tag reading/writing ---
lofty = "0.21"

# --- FFT (spectrum analyzer, moodbar) ---
rustfft = "6"

# --- File watching ---
notify = { version = "6", features = ["serde"] }

# --- HTTP client ---
# Use rustls to avoid requiring libssl-dev system package
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# --- UUID for playlist item identity ---
uuid = { version = "1", features = ["v4"] }

# --- Error handling ---
thiserror = "1"
anyhow = "1"

# --- Logging ---
log = "0.4"

# --- Utilities ---
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
rand = "0.8"
percent-encoding = "2"

[dev-dependencies]
cucumber = { version = "0.20", features = ["macros"] }

[[test]]
name = "equalizer_bdd"
harness = false

[profile.release]
panic = "abort"
codegen-units = 1
opt-level = "s"   # optimize for size in release builds

[profile.dev]
opt-level = 0
debug = true
